--- a/src/app/scss/components/_index.scss
+++ b/src/app/scss/components/_index.scss
@@ -1,11 +1,14 @@
 @forward 'topnav';
 @forward 'hero';
 @forward 'mobilenav';
-@forward 'homeitem';
 @forward 'footer';
 @forward 'singlepage';
-@forward 'imagegallery';
-@forward 'projects';
 @forward 'about';
 @forward 'contact';
-@forward 'projectdetail';
+@forward 'highlights';
+@forward 'quote';
+@forward 'info';
+@forward 'testimonial';
+@forward 'social';
+@forward 'cta';
+@forward 'map';
