--- a/src/app/scss/globals/_colors.scss
+++ b/src/app/scss/globals/_colors.scss
@@ -17,9 +17,10 @@
   --secondary-button-bg: transparent;
   --secondary-button-bg-hover: hsl(47, 61%, 85%);
   --secondary-button-border: hsl(0, 0%, 100%);
-  --secondary-button-border-hover: hsl(47, 61%, 85%);
+  --secondary-button-border-hover: hsl(46, 30%, 15%);
   --secondary-button-text-color: hsl(0, 0%, 100%);
   --secondary-button-text-color-hover: hsl(49, 11%, 29%);
+  --topnav-link-hover: hsl(180, 100%, 35%);
 
   --dark-color-mobile-gallery-opacity: rgba(0, 0, 0, 0.4);
 
