--- a/src/app/scss/components/_mobilenav.scss
+++ b/src/app/scss/components/_mobilenav.scss
@@ -19,7 +19,7 @@
     margin-block-end: u.rem(30);
     height: u.rem(40);
     width: auto;
-    border: 2px solid var(--text-color-light);
+    border: 5px solid var(--primary-button-bg);
     border-radius: 50%;
     padding: u.rem(5);
   }
@@ -39,10 +39,15 @@
 
   &__links {
     text-align: center;
-    font-size: u.rem(30);
+    font-size: u.rem(20);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    line-height: 1;
+    font-weight: 700;
     display: flex;
     flex-direction: column;
-    gap: u.rem(20);
+    justify-content: space-between;
+    gap: u.rem(30);
   }
 
   a {
