--- a/src/app/scss/globals/_colors.scss
+++ b/src/app/scss/globals/_colors.scss
@@ -12,15 +12,15 @@
   --content-text-color-dark: hsl(49, 11%, 29%);
   --content-image-headline-color: hsl(0, 0%, 100%);
 
-  --primary-button-bg: hsl(180, 100%, 42%);
-  --primary-button-bg-hover: hsl(180, 100%, 35%);
+  --primary-button-bg: #00d6d6;
+  --primary-button-bg-hover: #00b3b3;
   --secondary-button-bg: transparent;
   --secondary-button-bg-hover: hsl(47, 61%, 85%);
   --secondary-button-border: hsl(0, 0%, 100%);
   --secondary-button-border-hover: hsl(46, 30%, 15%);
   --secondary-button-text-color: hsl(0, 0%, 100%);
   --secondary-button-text-color-hover: hsl(49, 11%, 29%);
-  --topnav-link-hover: hsl(180, 100%, 35%);
+  --topnav-link-hover: #00b3b3;
 
   --dark-color-mobile-gallery-opacity: rgba(0, 0, 0, 0.4);
 
