--- a/src/app/scss/components/_hero.scss
+++ b/src/app/scss/components/_hero.scss
@@ -4,96 +4,117 @@
   &__bg-image {
     width: 100%;
     height: auto;
-    padding-block-start: 25px;
-    padding-inline-start: 20px;
+    padding-block: 20px;
+    padding-inline: 20px;
     background-image: url('../img/hero_bg.jpg');
     background-size: cover;
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto;
 
     @include u.breakpoint('medium') {
-      grid-template-rows: 1fr 2fr;
-      padding-block-start: 30px;
-      padding-inline-start: 30px;
-      max-height: u.rem(345);
+      grid-template-columns: 2fr 1fr;
+      grid-template-rows: auto auto;
+
+      padding-block: u.rem(20);
+      padding-inline: u.rem(30);
+      margin-block-end: u.rem(20);
     }
   }
   &__title {
     grid-column: 1/3;
-    grid-row: 1/2;
-    color: var(--text-color-dark);
+    grid-row: 2/3;
+    color: var(--text-color-light);
+    text-align: center;
+    line-height: 1;
+    font-size: 2.5rem;
+    font-size: clamp(
+      2.5rem,
+      2.0598591549295775rem + 1.8779342723004695vw,
+      3.75rem
+    );
+    margin-block-end: u.rem(20);
 
     @include u.breakpoint('medium') {
       grid-column: 1/2;
+      grid-row: 1/2;
+      text-align: left;
+      margin-block-start: u.rem(30);
+      margin-block-end: u.rem(30);
+      padding-inline-end: u.rem(20);
     }
   }
 
   &__left {
-    grid-column: 1/2;
-    grid-row: 2/3;
+    grid-column: 1/3;
+    grid-row: 3/4;
     height: 100%;
+
+    @include u.breakpoint('medium') {
+      grid-column: 1/2;
+      grid-row: 2/3;
+    }
   }
 
   &__text {
-    color: var(--text-color-dark);
+    color: var(--text-color-light);
+    line-height: 1.2;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    text-align: center;
+
+    @include u.breakpoint('medium') {
+      text-align: left;
+      padding-inline-end: u.rem(20);
+    }
   }
 
   &__content {
-    max-width: 350px;
-    margin-block-start: u.rem(15);
     font-size: u.rem(20);
-    font-size: clamp(u.rem(20), 1.14rem + 0.47vw, u.rem(25));
+    font-size: clamp(u.rem(20), 1.07rem + 0.75vw, u.rem(28));
+    margin-block-end: u.rem(20);
 
     @include u.breakpoint('medium') {
       margin-block-start: u.rem(0);
-      max-width: 350px;
+      margin-block-end: u.rem(30);
+      max-width: 500px;
     }
   }
 
   &__buttons {
     display: flex;
     flex-direction: column;
-    gap: u.rem(10) u.rem(20);
-    margin-block-end: u.rem(25);
+    align-items: center;
+    gap: u.rem(20);
+    margin-block-end: u.rem(10);
 
     @include u.breakpoint('medium') {
       flex-direction: row;
-      margin-block-end: u.rem(50);
     }
   }
 
   &__right {
-    grid-column: 2/3;
-    grid-row: 2/3;
+    grid-column: 1/3;
+    grid-row: 1/2;
     display: grid;
-    justify-items: end;
-    align-items: end;
-    background-image: url('../img/tom_stamp_background_vector.svg');
-    background-size: clamp(
-        u.rem(190),
-        10.818661971830986rem + 4.507042253521126vw,
-        u.rem(238)
-      )
-      auto;
-    background-position: right bottom;
-    background-repeat: no-repeat;
+    justify-items: center;
+    align-items: center;
 
     @include u.breakpoint('medium') {
+      grid-column: 2/3;
       grid-row: 1/3;
     }
   }
 
   &__image {
-    width: clamp(
-      11.475625rem,
-      10.454718309859157rem + 4.355868544600938vw,
-      14.375rem
-    );
+    width: u.rem(200);
+    width: clamp(u.rem(200), 8.1rem + 18.78vw, u.rem(400));
     height: auto;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-top: u.rem(10);
+    margin-bottom: u.rem(20);
   }
 }
