--- a/src/app/scss/globals/_colors.scss
+++ b/src/app/scss/globals/_colors.scss
@@ -22,6 +22,8 @@
   --secondary-button-text-color-hover: hsl(233, 14%, 25%);
   --topnav-link-hover: #00b3b3;
 
+  --highlight-bg: #3a506b;
+
   --dark-color-mobile-gallery-opacity: rgba(0, 0, 0, 0.4);
 
   --all-color: hsl(0, 0%, 50%);
