--- a/src/app/scss/globals/_colors.scss
+++ b/src/app/scss/globals/_colors.scss
@@ -23,6 +23,7 @@
   --topnav-link-hover: #00b3b3;
 
   --highlight-bg: #3a506b;
+  --quote-bg: #0b132b;
 
   --dark-color-mobile-gallery-opacity: rgba(0, 0, 0, 0.4);
 
