--- a/src/app/scss/globals/_colors.scss
+++ b/src/app/scss/globals/_colors.scss
@@ -24,6 +24,7 @@
 
   --highlight-bg: #3a506b;
   --quote-bg: #0b132b;
+  --card-bg: #00b3b3;
 
   --dark-color-mobile-gallery-opacity: rgba(0, 0, 0, 0.4);
 
