--- a/src/app/scss/components/_info.scss
+++ b/src/app/scss/components/_info.scss
@@ -2,6 +2,42 @@
 
 .info {
   &__section {
-    background-color: green;
+  }
+
+  &__container {
+    margin-bottom: 40px;
+  }
+
+  &__card {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    margin: 20px;
+    border-radius: 25px 0px 25px 0px;
+    background-color: var(--card-bg);
+
+    img {
+      width: u.rem(100);
+      height: auto;
+      object-fit: cover;
+    }
+
+    h3 {
+      line-height: 1;
+      text-transform: uppercase;
+      font-size: 0.9375rem;
+      font-size: clamp(
+        0.9375rem,
+        0.8274647887323944rem + 0.4694835680751174vw,
+        1.25rem
+      );
+    }
+
+    @include u.breakpoint(medium) {
+      height: 200px;
+    }
   }
 }
