--- a/src/app/scss/globals/_colors.scss
+++ b/src/app/scss/globals/_colors.scss
@@ -25,6 +25,7 @@
   --highlight-bg: #3a506b;
   --quote-bg: #0b132b;
   --card-bg: #00b3b3;
+  --testimonial-bg: #3a506b;
 
   --dark-color-mobile-gallery-opacity: rgba(0, 0, 0, 0.4);
 
