--- a/src/app/scss/globals/_colors.scss
+++ b/src/app/scss/globals/_colors.scss
@@ -26,6 +26,7 @@
   --quote-bg: #0b132b;
   --card-bg: #00b3b3;
   --testimonial-bg: #3a506b;
+  --socialcontainer-bg: #0b132b;
 
   --dark-color-mobile-gallery-opacity: rgba(0, 0, 0, 0.4);
 
