--- a/src/app/scss/globals/_colors.scss
+++ b/src/app/scss/globals/_colors.scss
@@ -24,6 +24,9 @@
   --secondary-button-text-color-hover: hsl(233, 14%, 25%);
   --topnav-link-hover: #00b3b3;
 
+  --link-color: hsl(180, 100%, 42%);
+  --link-color-hover: hsl(180, 100%, 35%);
+
   --highlight-bg: #3a506b;
   --quote-bg: #0b132b;
   --card-bg: #00b3b3;
