--- a/src/app/scss/components/_footer.scss
+++ b/src/app/scss/components/_footer.scss
@@ -4,22 +4,50 @@
   $b: &;
 
   background-color: var(--dark-bg);
-  margin-block-start: u.rem(60);
+
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 100px;
+  height: u.rem(800);
   padding-inline: u.rem(20);
-  padding-block-start: u.rem(10);
+  padding-block-start: u.rem(20);
   color: var(--content-text-color-light);
   position: bottom;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto auto auto;
   gap: u.rem(20) u.rem(10);
 
   @include u.breakpoint('medium') {
-    grid-template-columns: repeat(4, auto);
-    gap: u.rem(0) u.rem(50);
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    padding-block-end: u.rem(20);
+    height: u.rem(552);
+  }
+
+  @include u.breakpoint('large') {
+    grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    gap: u.rem(20);
+    padding-block-end: u.rem(20);
+    height: u.rem(267);
+  }
+
+  h3 {
+    color: var(--content-text-color-light);
+    margin-block-end: u.rem(5);
+  }
+
+  a {
+    color: var(--content-text-color-light);
+  }
+
+  a:visited {
+    color: var(--content-text-color-light);
+  }
+
+  a:hover {
+    color: var(--link-color-hover);
   }
 
   li {
@@ -66,18 +94,29 @@
 
   &__collumn1 {
     grid-column: 1/2;
-    grid-row: 1/4;
+    grid-row: 1/2;
+    display: flex;
+    flex-direction: column;
     p {
       font-size: u.rem(10);
       white-space: nowrap;
     }
 
     @include u.breakpoint(medium) {
+      grid-column: 2/3;
+      grid-row: 1/2;
+    }
+
+    @include u.breakpoint(large) {
+      grid-column: 2/3;
+      grid-row: 1/2;
     }
   }
 
   &__logo {
-    width: u.rem(70);
+    max-width: u.rem(280);
+    width: 11.25rem;
+    width: clamp(11.25rem, 9.049295774647888rem + 9.389671361502346vw, 17.5rem);
     height: auto;
     display: block;
     fill: var(--light-bg);
@@ -85,43 +124,129 @@
     &:hover {
       fill: var(--text-color-light);
     }
+
+    @include u.breakpoint('medium') {
+      width: 6.25rem;
+      width: clamp(
+        6.25rem,
+        5.721830985915493rem + 2.253521126760563vw,
+        7.75rem
+      );
+      &.horizontal {
+        display: none;
+      }
+    }
+
+    @include u.breakpoint-down('small') {
+      &.vertical {
+        display: none;
+      }
+    }
   }
 
   &__collumn2 {
-    grid-column: 2/3;
-    grid-row: 1/4;
+    grid-column: 1/2;
+    grid-row: 2/3;
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
 
     @include u.breakpoint(medium) {
+      grid-column: 1/2;
+      grid-row: 2/3;
+      align-items: center;
+    }
+
+    @include u.breakpoint(large) {
+      grid-column: 3/4;
+      grid-row: 1/2;
+      align-items: flex-start;
     }
   }
 
   &__collumn3 {
-    grid-column: 3/5;
-    grid-row: 1/3;
+    grid-column: 1/2;
+    grid-row: 3/4;
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
 
     @include u.breakpoint('medium') {
-      grid-column: 3/4;
+      grid-column: 2/3;
+      grid-row: 2/3;
     }
-  }
 
-  &__collumn4 {
-    grid-column: 3/5;
-    grid-row: 2/3;
-
-    @include u.breakpoint('medium') {
+    @include u.breakpoint(large) {
       grid-column: 4/5;
       grid-row: 1/2;
     }
   }
 
-  &__privacy {
-    @include u.breakpoint-down('small') {
-      font-size: u.rem(10);
-      white-space: nowrap;
+  &__collumn4 {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    display: flex;
+    flex-direction: column;
+
+    @include u.breakpoint('medium') {
+      grid-column: 1/2;
+      grid-row: 3/4;
+      align-items: center;
+    }
+
+    @include u.breakpoint(large) {
+      grid-column: 5/6;
+      grid-row: 1/2;
+      align-items: flex-start;
+    }
+  }
+
+  &__collumn5 {
+    grid-column: 1/2;
+    grid-row: 5/6;
+    display: flex;
+    flex-direction: column;
+    gap: u.rem(5);
+    margin-block-end: u.rem(20);
+
+    &__copyright {
+      opacity: 0.5;
+
+      @include u.breakpoint('medium') {
+        font-size: u.rem(12);
+      }
+    }
+
+    &__logoGroup {
+      @include u.breakpoint('medium') {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+
+    &__tom {
+      a {
+        color: var(--link-color);
+      }
+
+      a:visited {
+        color: var(--link-color);
+      }
+
+      a:hover {
+        color: var(--link-color-hover);
+      }
+    }
+
+    @include u.breakpoint('medium') {
+      grid-column: 1/2;
+      grid-row: 1/2;
+      text-align: center;
+    }
+
+    @include u.breakpoint(large) {
+      grid-column: 1/2;
+      grid-row: 1/2;
     }
   }
 }
