--- a/src/app/scss/globals/_colors.scss
+++ b/src/app/scss/globals/_colors.scss
@@ -7,7 +7,7 @@
   --text-color-dark: hsl(233, 14%, 25%);
   --mobilemenu-bg: hsl(225, 40%, 18%);
   --dark-bg: hsl(225, 40%, 18%);
-  --light-bg: hsl(0, 0%, 100%);
+
   --content-text-color-light: hsl(0, 0%, 100%);
   --content-text-color-dark: hsl(233, 14%, 25%);
   --content-image-headline-color: hsl(0, 0%, 100%);
@@ -33,6 +33,7 @@
   --testimonial-bg: #3a506b;
   --socialcontainer-bg: #0b132b;
   --cta-bg: #00d3d4;
+  --sp-bg: #a9b2be;
 
   --dark-color-mobile-gallery-opacity: rgba(0, 0, 0, 0.4);
 
