--- a/src/app/scss/globals/_colors.scss
+++ b/src/app/scss/globals/_colors.scss
@@ -29,11 +29,13 @@
 
   --highlight-bg: #3a506b;
   --quote-bg: #0b132b;
+  --shopcard-bg: #0b132b;
   --card-bg: #00b3b3;
   --testimonial-bg: #3a506b;
   --socialcontainer-bg: #0b132b;
   --cta-bg: #00d3d4;
   --sp-bg: #a9b2be;
+  --shop-price: #00b3b3;
 
   --dark-color-mobile-gallery-opacity: rgba(0, 0, 0, 0.4);
 
