--- a/src/app/scss/components/_highlights.scss
+++ b/src/app/scss/components/_highlights.scss
@@ -49,8 +49,10 @@
     img {
       width: 100%;
       min-height: u.rem(200);
+      max-height: u.rem(200);
       border-radius: 25px 0 0 0;
       object-fit: cover;
+      object-position: center;
     }
   }
 
